--- a/client/index.html
+++ b/client/index.html
@@ -57,7 +57,7 @@
         </div>
       </div>
       <div class="page-header">
-        <h1>Wall Chat</h1>
+        <h1>Chat Wall</h1>
       </div>
       <div class="row">
         
